# Lý do chọn giải pháp:
# - Quản lý package bằng `uv`, nhanh nhẹ, thay thế hoàn toàn pip/poetry trên môi trường hạn chế (VPS 2GB).
# - Gắn chặt python 3.14-slim, với litestar và advanced-alchemy.
# - Ràng buộc asyncpg (cho Postgres) và pydantic-ai + litellm cho AI agents.

[project]
name = "fast-platform-core"
version = "0.1.0"
description = "Hệ thống Agentic AI hiện đại theo chuẩn kiến trúc V60.0"
authors = [
    { name = "Admin", email = "lapiweb@gmail.com" }
]
requires-python = ">=3.14"

dependencies = [
    "litestar[standard]>=2.14.0",
    "advanced-alchemy>=0.20.0",
    "asyncpg>=0.29.0",
    "pydantic-ai>=0.0.12",
    "litellm>=1.83.0",
    "rapidfuzz>=3.14.3",
    "redis>=7.3.0",
    "aiosqlite>=0.22.1",
    "numpy>=2.4.3",
    "bcrypt>=5.0.0",
    "pillow>=12.0.0",
    "edge-tts>=7.2.7",
    "psutil>=7.2.2",
    "cryptography>=46.0.5",
    "fastembed>=0.5.1",
    "tqdm>=4.67.1",
    "flashtext>=2.7",
    "lxml>=6.0.2",
    "arq>=0.25.0",
    "aiosmtplib>=3.0.0",
    "httpx>=0.28.1",
    "google-ads>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
managed = true
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
