[project]
name = "fast-api-gateway"
version = "0.1.0"
description = "Fast Platform API Gateway with Litestar"
dependencies = [
    "litestar[standard]",
    "pydantic[email]",
    "python-dotenv",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "advanced-alchemy",
    "pydantic-ai",
    "litellm",
    "fast-shared",
    "fast-ai-engine",
    "pyjwt",
    "bcrypt",
    "redis",
    "edge-tts",
    "uvicorn",
    "httpx",
    "fastembed",
    "numpy",
    "anyio",
    "uvloop",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
